0.082

Got rid of silly use lib in the tests, shouldn't have been in public

Added dependency on Test::More

Moved from type =>, vals => to exp =>, got => in stack entries

Individual descend()s no longer pop their data from the stack, that's taken
care of by Test::Deep::descend. This made things simpler in all the
comparisons.

0.081

Got rid of struct mode for num()

Large internal changes, now using a stack object rather than just an array.
This handles rendering the stack.

The comparisons handle rendering the got and expected values now.

num() and str() numify/stringify before comparing, this makes overload of ==
or eq irrelevant. This also prevents problems with the diag when something
stringifies differently to it's numificiation or differently each time you
look.

fixed diag of overloaded refs to display the ref value, not the overloaded
value

nicer diags for booleans

0.08

Slight doc fix

Added coderef calling as a test

0.07

Fixed number.t to skip strict test when if Scalar::Util is not right

Major improvement of docs. No longer reads like it was written by a drunken
badger.

0.06

Overhaul of Test::Deep::descend, native types are now wrapped up in a
Test::Deep:Cmp object, moves lots of logic out of descend

Added ArrayLength, HashKeys, RefType, and Blessed comparisons

All tests now use Test::NoWarnings

Broke out descend tests into hash.t, array, regexpref.t, probably should
break out more

Updated version of Scalar::Util dependency, thanks to Steve Purkis

0.05

No longer using overload::StrVal() for looking behind overloads as it's
broken for Regexp refs in some versions of Perl.

0.04

Documented bool and included the files!!

0.03

cmp_deeply(undef, \"") calls overload::StrVal(undef)

added bool test

using Scalar::Util to get reftype and blessed class

0.02

Added prereq to Makefile.PL

0.01

First release