@@ -65,4 +65,5 @@ t/array.t
 t/arraylength.t
 t/hash.t
 t/hashkeys.t
+t/scalarref.t
 META.yml                                 Module meta-data (added by MakeMaker)
