@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Test-Deep
-version:      0.082_beta1
+version:      0.082
 version_from: ./lib/Test/Deep.pm
 installdirs:  perl
 requires:
